# CompatLab

./: .gitignore  Makefile  README.md  README.ru.md  ai-prompts.txt  go.mod  pyproject.toml
compatlab/: __init__.py  arg_parser.py  cli.py  diagnostics.py  models.py
compatlab/artifact/: __init__.py  detect.py
compatlab/bundle/: __init__.py  resolver.py
compatlab/compare/: __init__.py  engine.py
compatlab/elfscan/: __init__.py  command.py  parsers.py  scanner.py
compatlab/problem/: __init__.py
compatlab/profile/: README.md  __init__.py  builder.py  catalog.py  docker.py  local.py  parsers.py  rootfs.py  runtimes.py
compatlab/profiles/: astra-17.yml  rocky-9.yml  sberlinux-9.yml  ubuntu-1804.yml  ubuntu-2004.yml  ubuntu-2204.yml  ubuntu-2404.yml
compatlab/report/: __init__.py  html.py  json.py  pretty.py
compatlab/rpm/: __init__.py  scanner.py
compatlab/scanners/: __init__.py  rpm_scanner.py  wheel_scanner.py
compatlab/scanners/elf_scanner/: __init__.py  scanner.py
compatlab/services/: __init__.py  artifacts.py  exceptions.py  profiles.py  reports.py
compatlab/src/: __init__.py  cli.py  diagnostics.py
compatlab/src/artifact/: detect.py
compatlab/src/bundle/: __init__.py  models.py  resolver.py
compatlab/src/compare/: engine.py
compatlab/src/elfscan/: command.py  models.py  parsers.py  scanner.py
compatlab/tests/: __init__.py  rpm_fixtures.py  test_bundle_resolver.py  test_cli.py  test_compare_engine.py  test_diagnostics.py  test_docker_cli.py  test_docker_image.py  test_profile_generate.py  test_profile_parsers.py  test_readelf_parsers.py  test_report_html.py  test_rootfs_tar.py  test_rpm_scanner.py  test_runtime_presets.py  test_wheel_scanner.py  wheel_fixtures.py
compatlab/wheel/: __init__.py  scanner.py
compatlab/wheels/: __init__.py  scanner.py
docs/: architecture.md  architecture.ru.md  compatlab_codex_handoff_python.md  compatlab_codex_handoff_v0_4.md  compatlab_codex_handoff_v0_5.md  compatlab_codex_handoff_v0_6.md  compatlab_codex_v0_4_addendum.md  compatlab_v0.10_codex_handoff.md  compatlab_v0.7_codex_handoff.md  compatlab_v0.8_codex_handoff.md  compatlab_v0.9_codex_handoff.md  compatlab_v0_2_codex_context.md  compatlab_v0_3_codex_context.md  compatlab_v1_1_codex_spec.md  compatlab_v1_2_codex_spec.md
docs/ReleaseNotes/: v0.1.md  v0.10.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md  v0.8.md  v0.9.md  v1.1.md  v1.2.md
packaging/: Dockerfile.sberlinux97  Dockerfile.ubuntu2204
(+30 files in other folders)
