[project]
name = "compatlab"
version = "0.1.0"
description = "Preflight compatibility checker for Linux binary artifacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
compatlab = "compatlab.src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["compatlab"]

[tool.hatch.build.targets.wheel.force-include]
"compatlab/profiles" = "compatlab/profiles"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["compatlab/tests"]
