[project]
name = "compatlab"
version = "1.2.0"
description = "Preflight compatibility checker for Linux binary artifacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "setuptools (>=82.0.1,<83.0.0)",
]

[project.scripts]
compatlab = "compatlab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "ordered-set>=4.1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "zstandard>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["compatlab"]

[tool.hatch.build.targets.wheel.force-include]
"compatlab/profiles" = "compatlab/profiles"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["compatlab/tests"]

[tool.coverage.run]
branch = true
source = ["compatlab"]
omit = [
    "compatlab/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
